--- a/user/templates/user/basic.html
+++ b/user/templates/user/basic.html
@@ -1,92 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
+
 <head>
-	<meta charset="UTF-8">
-	<title>Dashboard</title>
-	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <meta charset="UTF-8">
+    <title>{% block title %}{% endblock %}</title>
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     {% block css %}{% endblock %}
     <!-- <link rel="stylesheet" type="text/css" href="{% static 'user/index.css' %}" /> -->
 </head>
+
 <body>
-  
-<div class="wrapper">
-  <div class="top_navbar">
-    <div class="top_menu">
-			<!-- <img class="logo"src="+.png" alt=""> -->
-			<img class="logo"src="{% static 'user/+.png' %}" alt="">
-      <div class="Head">Pharmacy Management</div>
-      <ul>
-        <li><a href="#">
-          <i class="fas fa-user"></i>
-          </a></li>
-      </ul>
+    <div class="wrapper">
+        <div class="top_navbar">
+            <div class="top_menu">
+                <!-- <img class="logo"src="+.png" alt=""> -->
+                <img class="logo" src="{% static 'user/+.png' %}" alt="">
+                <div class="Head">Pharmacy Management</div>
+                <ul>
+                    <li><a href="#">
+                            <i class="fas fa-user"></i>
+                        </a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="sidebar">
+            <ul>
+                <li><a href="About.html">
+                        <span class="icon"><i class="fas fa-info-circle"></i></span>
+                        <span class="title">About Us</span></a></li>
+                <li><a href="Dashboard.html" class="active">
+                        <span class="icon"><i class="material-icons" style="font-size:15px;">dashboard</i></span>
+                        <span class="title">Dashboard</span>
+                    </a></li>
+                <li><a href="#">
+                        <span class="icon"><i class="fas fa-list-ul"></i></span>
+                        <span class="title">Products</span>
+                    </a></li>
+                <li><a href="#">
+                        <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+                        <span class="title">Orders</span>
+                    </a></li>
+                <li><a href="#">
+                        <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
+                        <span class="title">Logout</span>
+                    </a></li>
+            </ul>
+        </div>
     </div>
-  </div>
-
-<!-- <a class="active" href="#home"><i class="material-icons" style="font-size:15px;">home</i>About</a> -->
-
-  <div class="sidebar">
-      <ul>
-        <li><a href="About.html">
-          <span class="icon"><i class="fas fa-info-circle"></i></span>
-          <span class="title">About Us</span></a></li>
-        <li><a href="Dashboard.html" class="active">
-          <span class="icon"><i class="material-icons" style="font-size:15px;">dashboard</i></span>
-          <span class="title">Dashboard</span>
-          </a></li>
-        <li><a href="#">
-          <span class="icon"><i class="fas fa-list-ul"></i></span>
-          <span class="title">Products</span>
-          </a></li>
-        <li><a href="#">
-          <span class="icon"><i class="fas fa-shopping-cart"></i></span>
-          <span class="title">Orders</span>
-          </a></li>
-        <li><a href="#">
-          <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
-          <span class="title">Logout</span>
-          </a></li>
-    </ul>
-  </div>
-
-</div>
-
-{% block body %}{% endblock %}
-
-<script>
-  var slideIndex = 1;
-  showDivs(slideIndex);
-
-  function plusDivs(n) {
-    showDivs(slideIndex += n);
-  }
-
-  function currentDiv(n) {
-    showDivs(slideIndex = n);
-  }
-
-  function showDivs(n) {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    var dots = document.getElementsByClassName("demo");
-    if (n > x.length) {slideIndex = 1}
-    if (n < 1) {slideIndex = x.length}
-    for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none";
-    }
-    for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" w3-red", "");
-    }
-    x[slideIndex-1].style.display = "block";
-    dots[slideIndex-1].className += " w3-red";
-  }
-  </script>
-
+    {% block body %}{% endblock %}
+    <div class="footer">
+        <center>
+            <ul>
+                <h3><i class="fa fa-heart" style="font-size:20px;color:red;margin-right: 10px;"></i>Always Laugh When You Can It Is Cheap Medicine<i class="fa fa-heart" style="font-size:20px;color:red;margin-left: 10px;"></i></h3>
+            </ul>
+        </center>
+    </div>
+    <br />
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    {% block js %}{% endblock %}
 </body>
-</html>
 
+</html>
