--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -21,73 +21,81 @@
         <button class="w3-button demo" onclick="currentDiv(3)">3</button>
     </div>
     <br /><br />
-    <div class="row">
+    <div id="row">
         <center>
             <h2>Popular categories</h2>
             <h4>Get Best Deals On Wellness Products</h4>
             <br /><br />
         </center>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://goodmockups.com/wp-content/uploads/2020/01/Free-Honey-Jar-Mockup-PSD-Set-2.jpg" alt="health_products" style="width:80%;">
             <button class="button">Up to 80% off</button>
         </div>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://images-na.ssl-images-amazon.com/images/I/81tmMIfhb0L._SY606_.jpg" alt="family_nutrition" style="width:80%;">
             <button class="button">Up to 40% off</button>
         </div>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://rukminim1.flixcart.com/image/352/352/jpr86fk0/diaper/b/y/p/m-new-diapers-pants-medium-76-count-76-pampers-original-imafbxba677nzu9u.jpeg?q=70" alt="baby_and_infant" style="width:80%;">
             <button class="button">Up to 50% off</button>
         </div>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://5.imimg.com/data5/SF/WO/MY-50907774/hamdard-safi-500ml-500x500.jpg" alt="baby_and_infant" style="width:80%;">
             <button class="button">Up to 60% off</button>
         </div>
     </div>
     <br /><br />
-    <div class="row">
+    <div id="row">
         <center>
             <h2>Health Juices</h2>
             <h4>Limited Edition</h4>
             <br /><br />
         </center>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://cdn.shopify.com/s/files/1/1295/3439/products/1_31256a44-f090-4502-9d04-a78f20104524_1024x1024.jpg?v=1571458036" alt="health_products" style="width:80%;">
             <button class="button">Up to 80% off</button>
         </div>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://shop.coles.com.au/wcsstore/Coles-CAS/images/7/4/7/7477668.jpg" alt="family_nutrition" style="width:80%;">
             <button class="button">Up to 40% off</button>
         </div>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://images-na.ssl-images-amazon.com/images/I/61jL2GCuKLL._SX425_PIbundle-24,TopRight,0,0_AA425SH20_.jpg" alt="baby_and_infant" style="width:80%;">
             <button class="button">Up to 50% off</button>
         </div>
-        <div class="column">
+        <div id="column">
             <img class="Product" src="https://sc01.alicdn.com/kf/UTB8HtDBPGrFXKJk43Ovq6ybnpXad.jpg" alt="baby_and_infant" style="width:80%;">
             <button class="button">Up to 60% off</button>
         </div>
     </div>
     <br /><br />
-    <div class="row">
+    <div id="row">
         <center>
             <h2>Categories</h2>
             <br /><br />
         </center>
-        <div class="column1">
+        <div id="column1">
             <img class="Product" src="https://lh3.googleusercontent.com/jfhnIZASUU6B5ETz1et-gRlcSGWRml6UBr-_H67B9Y62mcYXMoSmas1LbO-jhsrVZ1iIEaxy=w1080-h608-p-no-v0" alt="baby_and_infant" style="width:80%;">
             <button class="categories-homeo">Homeopathic</button>
         </div>
-        <div class="column1">
+        <div id="column1">
             <img class="Product" src="https://ajp.com.au/wp-content/uploads/2015/03/Dollarphotoclub_75783184.jpg" alt="baby_and_infant" style="width:80%;">
             <button class="categories-allo">Allopathic</button>
         </div>
-        <div class="column1">
+        <div id="column1">
             <img class="Product" src="https://5.imimg.com/data5/CS/MY/MY-3092624/ayurvedic-medicine-500x500.jpg" alt="baby_and_infant" style="width:80%;">
             <button class="categories-ayu">Ayurvedic</button>
         </div>
     </div>
     <br /><br />
+    <div id="footer">
+        <center>
+            <ul id="last-line">
+                <h3><i class="fa fa-heart" style="font-size:20px;color:red;margin-right: 10px;"></i>Always Laugh When You Can It Is Cheap Medicine<i class="fa fa-heart" style="font-size:20px;color:red;margin-left: 10px;"></i></h3>
+            </ul>
+        </center>
+    </div>
+    <br />
 </div>
 {% endblock %}
 {% block js %}
