--- a/user/static/user/basic.css
+++ b/user/static/user/basic.css
@@ -9,12 +9,13 @@
   font-family: 'Montserrat', sans-serif;
 }
 body{
-  /* background: #e1ecf2; */
   background: #15161d;
+  color:white;
 }
 .wrapper{
   margin: 10px;
 }
+
 .wrapper .top_navbar{
   width: 100%;
   width: calc(100% - 20px);
@@ -42,7 +43,6 @@ body{
 }
 
 .wrapper .top_navbar .top_menu{
-  /* width: calc(100% - 70px); */
   width: 100%;
   height: 100%;
   background: #fff;
@@ -53,13 +53,13 @@ body{
   align-items: center;
   padding: 0 20px;
   box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  margin-top: -10px;
 }
 
 .wrapper .top_navbar .top_menu .logo{
   width: 60px;
 }
 .wrapper .top_navbar .top_menu .Head{
-  /* width: 65px; */
   color: #888;
   font-size: 20px;
   font-weight: 700;
@@ -67,14 +67,12 @@ body{
   margin-right: 867px;
 }
 
-
 .wrapper .top_navbar .top_menu ul{
   display: flex;
 }
 
 .wrapper .top_navbar .top_menu ul li a{
   display: block;
-  margin: 0 10px;
   width: 35px;
   height: 40px;
   line-height: 35px;
@@ -95,14 +93,14 @@ body{
 
 .wrapper .sidebar{
   position: fixed;
-  top: 80px;
+  top: 70px;
   left: 10px;
-  /* background: #2e4ead; */
   background: rgba(37,45,66,0.7);
   width: 200px;
-  height: calc(100% - 80px);
+  height: calc(98% - 80px);
   border-bottom-left-radius: 20px;
   transition: all 0.3s ease;
+  z-index: -1;
 }
 
 .wrapper .sidebar ul li a{
@@ -113,7 +111,6 @@ body{
     margin-bottom: 1px;
     color: #92a6e2;
     white-space: nowrap;
-    align-content: center;
 }
 
 .wrapper .sidebar ul li a:before{
@@ -140,7 +137,6 @@ body{
 .wrapper .sidebar ul li a.active{
   background: #4360b5;
   color: #fff;
-
 }
 
 .wrapper .sidebar ul li a:hover:before,
@@ -164,60 +160,10 @@ body{
   display: none;
 }
 
-.heading{
-  top: 26%;
-  left: 32%;
-  color: white;
-  z-index: 5;
-  position: absolute;
-  width: 760px;
-  height: 45px;
-  background:#4360b5;
+.footer ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 10px;
+    overflow: hidden;
+    background-color:  #4360b5;
 }
-
-.heading .h{
-  margin: 10px;
-  padding-left: 20px;
-}
-
-.Order_table{
-  top: 60%;
-  left: 57%;
-  color: white;
-  transform: translate(-50%,-50%);
-  position: absolute;
-  width: 800px;
-  height: 400px;
-  background:rgba(37,45,66,0.7);
-}
-
-
-.Order_table #main_row{
-  color: #888;
-  margin:20px;
-  margin-top: 27px;
-  margin-bottom: 27px;
-}
-
-.Order_table .row{
-  color: white;
-  margin: 20px;
-}
-.Order_table #main_row .col{
-  font-size: 15px;
-}
-
-.Order_table .row .col{
-  font-size: 16px;
-}
-hr{
-    background: rgba(255,255,255,0.1);
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.btn-danger{
-  width: 120px;
-  height: 36px;
-}
-
