--- a/user/templates/user/order.html
+++ b/user/templates/user/order.html
@@ -3,7 +3,27 @@
 {% block title %}Order{% endblock %}
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static 'user/order.css' %}">
+<style type="text/css">
+.heading2 {
+    width: 760px;
+    top: 86%;
+    color: white;
+    left: 32%;
+    height: 45px;
+    background: #4360b5;
+    position: absolute;
+}
 
+.h {
+    margin: 10px;
+    padding-left: 20px;
+    padding-right: 273px;
+}
+
+.TotalPrice {
+    float: right;
+}
+</style>
 {% endblock %}
 {% block body %}
 <div class="heading">
@@ -51,5 +71,89 @@
             <center><button type="button" class="btn btn-danger">Delete</button></center>
         </div>
     </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <center>Amoxyciline</center>
+        </div>
+        <div class="col">
+            <center>15</center>
+        </div>
+        <div class="col">
+            <center>150</center>
+        </div>
+        <div class="col">
+            <center><button type="button" class="btn btn-danger">Delete</button></center>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <center>Amoxyciline</center>
+        </div>
+        <div class="col">
+            <center>15</center>
+        </div>
+        <div class="col">
+            <center>150</center>
+        </div>
+        <div class="col">
+            <center><button type="button" class="btn btn-danger">Delete</button></center>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <center>Amoxyciline</center>
+        </div>
+        <div class="col">
+            <center>15</center>
+        </div>
+        <div class="col">
+            <center>150</center>
+        </div>
+        <div class="col">
+            <center><button type="button" class="btn btn-danger">Delete</button></center>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <center>Amoxyciline</center>
+        </div>
+        <div class="col">
+            <center>15</center>
+        </div>
+        <div class="col">
+            <center>150</center>
+        </div>
+        <div class="col">
+            <center><button type="button" class="btn btn-danger">Delete</button></center>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <center>Amoxyciline</center>
+        </div>
+        <div class="col">
+            <center>15</center>
+        </div>
+        <div class="col">
+            <center>150</center>
+        </div>
+        <div class="col">
+            <center><button type="button" class="btn btn-danger">Delete</button></center>
+        </div>
+    </div>
 </div>
+<div class="heading2">
+    <div class="h">Total Price <span class="TotalPrice">100</span></div>
+</div>
+{% endblock %}
+
+{% block js %}
+
+
+
 {% endblock %}
