--- a/user/templates/user/catproducts.html
+++ b/user/templates/user/catproducts.html
@@ -1,113 +1,109 @@
 {% extends 'user/basic.html'%}
 {% load static %}
-{% block title %}Category|Ayurvedic Products{% endblock %}
+{% block title %}Category|{{product.0.category}} Products{% endblock %}
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static 'user/catproducts.css' %}">
+<style type="text/css">
+.col img {
+    max-width: 255px;
+    height: 220px;
+}
+
+#main .prod_title {
+    font-size: 20px;
+}
+
+.cart {
+    cursor: not-allowed;
+    pointer-events: all !important;
+}
+</style>
 {% endblock %}
 {% block body %}
 <div id="main">
-    <span>All Products </span><br>
+    <span class="prod_title">All Products </span><br>
     <!-- Showing total no. of products in this category (Backend) -->
-    <span>1 - 14 of 14 products</span>
+    <span>1 - {{length}} of {{length}} products</span>
     <div class="row my-3">
+        {% for i in product %}
         <div class="col">
-            <div class="card" style="width: 18rem;z-index: -1;">
-                <img class="card-img-top" src="{% static 'user/demo.jpg' %}" alt="Card image cap">
+            <div class="card align-items-center" style="width: 18rem;z-index: -1;">
+                <img class="card-img-top" src="/media/{{i.image}}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title" id="namepr" style="color: black;">Blood Glucometer Kit</h5>
-                    <p class="card-text">Makes the blood glucose monitoring process easy</p>
-                    <h6 class="card-title">Price: <span id="pricepr">10</span></h6>
-                    <div id="all_btn">
-                        <span id="divpr" class="divpr">
-                            <button id="pr" class="btn btn-primary cart">Add to Cart</button>
-                        </span>
-                        <a href="/shop/products/"><button id="qv" class="btn btn-primary">QuickView</button></a>
-                    </div>
+                    <h5 class="card-title" id="namepr{{i.product_id}}" style="color: black;">{{i.product_name}}</h5>
+                    <p class="card-text">{{i.desc1|slice:"0:23"}}...</p>
+                    <h6>Price: <span id="pricepr{{i.product_id}}">{{i.price}}</span></h6>
+                    <span id="divpr{{i.product_id}}" class="divpr">
+                        <button id="pr{{i.product_id}}" class="btn btn-primary cart">Add to Cart</button>
+                    </span>
+                    <a href="#"><button id="qv{{i.product_id}}" class="btn btn-primary">QuickView</button></a>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;z-index: -1;">
-                <img class="card-img-top" src="{% static 'user/demo.jpg' %}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title" id="namepr" style="color: black;">Blood Glucometer Kit</h5>
-                    <p class="card-text">Makes the blood glucose monitoring process easy</p>
-                    <h6 class="card-title">Price: <span id="pricepr">10</span></h6>
-                    <div id="all_btn">
-                        <span id="divpr" class="divpr">
-                            <button id="pr" class="btn btn-primary cart">Add to Cart</button>
-                        </span>
-                        <a href="/shop/products/"><button id="qv" class="btn btn-primary">QuickView</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;z-index: -1;">
-                <img class="card-img-top" src="{% static 'user/demo.jpg' %}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title" id="namepr" style="color: black;">Blood Glucometer Kit</h5>
-                    <p class="card-text">Makes the blood glucose monitoring process easy</p>
-                    <h6 class="card-title">Price: <span id="pricepr">10</span></h6>
-                    <div id="all_btn">
-                        <span id="divpr" class="divpr">
-                            <button id="pr" class="btn btn-primary cart">Add to Cart</button>
-                        </span>
-                        <a href="/shop/products/"><button id="qv" class="btn btn-primary">QuickView</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last%}
     </div>
     <div class="row my-3">
-        <div class="col">
-            <div class="card" style="width: 18rem;z-index: -1;">
-                <img class="card-img-top" src="{% static 'user/demo.jpg' %}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title" id="namepr" style="color: black;">Blood Glucometer Kit</h5>
-                    <p class="card-text">Makes the blood glucose monitoring process easy</p>
-                    <h6 class="card-title">Price: <span id="pricepr">10</span></h6>
-                    <div id="all_btn">
-                        <span id="divpr" class="divpr">
-                            <button id="pr" class="btn btn-primary cart">Add to Cart</button>
-                        </span>
-                        <a href="/shop/products/"><button id="qv" class="btn btn-primary">QuickView</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;z-index: -1;">
-                <img class="card-img-top" src="{% static 'user/demo.jpg' %}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title" id="namepr" style="color: black;">Blood Glucometer Kit</h5>
-                    <p class="card-text">Makes the blood glucose monitoring process easy</p>
-                    <h6 class="card-title">Price: <span id="pricepr">10</span></h6>
-                    <div id="all_btn">
-                        <span id="divpr" class="divpr">
-                            <button id="pr" class="btn btn-primary cart">Add to Cart</button>
-                        </span>
-                        <a href="/shop/products/"><button id="qv" class="btn btn-primary">QuickView</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;z-index: -1;">
-                <img class="card-img-top" src="{% static 'user/demo.jpg' %}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title" id="namepr" style="color: black;">Blood Glucometer Kit</h5>
-                    <p class="card-text">Makes the blood glucose monitoring process easy</p>
-                    <h6>Price: <span id="pricepr">10</span></h6>
-                    <div id="all_btn">
-                        <span id="divpr" class="divpr">
-                            <button id="pr" class="btn btn-primary cart">Add to Cart</button>
-                        </span>
-                        <a href="/shop/products/"><button id="qv" class="btn btn-primary">QuickView</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endif %}
+        {% endfor %}
     </div>
 </div>
+{% endblock %}
+{% block js %}
+<script type="text/javascript">
+// Find out the cart items from localstorage
+if (localStorage.getItem('cat_cart') == null) {
+    var cat_cart = {};
+} else {
+    cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
+    console.log(cat_cart);
+    document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
+    updateCart(cat_cart);
+}
+// If the add to cart button is clicked, add/increment the item
+$('.divpr').on('click', 'button.cart', function() {
+    var idstr = this.product_id.toString();
+    if (cat_cart[idstr] != undefined) {
+        qty = cat_cart[idstr][0] + 1;
+        cat_cart[idstr][0] = qty;
+    } else {
+        qty = 1;
+        name = document.getElementById('name' + idstr).innerHTML;
+        price = document.getElementById('price' + idstr).innerHTML;
+        cat_cart[idstr] = [qty, name, parseInt(price)];
+    }
+    updateCart(cat_cart);
+
+});
+
+
+function updateCart(cat_cart) {
+    for (var item in cat_cart) {
+        document.getElementById("div" + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button> <span id='val" + item + "''>" +
+            cat_cart[item][0] + "</span> <button id='plus" + item + "' class= 'btn btn-primary plus'> + </button>";
+    }
+    localStorage.setItem('cat_cart', JSON.stringify(cat_cart));
+    document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
+}
+// If plus or minus button is clicked, then change the cart as well as the display value
+$('.divpr').on("click", "button.minus", function() {
+    a = this.id.slice(7, );
+    cat_cart['pr' + a][0] -= 1;
+    cat_cart['pr' + a][0] = Math.max(0, cat_cart['pr' + a][0]);
+    // document.getElementById('valpr'+a).innerHTML = cart['pr'+a][0];
+    if (cat_cart['pr' + a][0] == 0) {
+        document.getElementById('divpr' + a).innerHTML = '<button id="pr' + a + '" class ="btn btn-primary cart">Add to Cart</button>';
+        delete cat_cart['pr' + a];
+    } else {
+        document.getElementById('valpr' + a).innerHTML = cat_cart['pr' + a][0];
+    }
+    // updatePopover(cart);
+    updateCart(cat_cart);
+});
+$('.divpr').on("click", "button.plus", function() {
+    a = this.id.slice(6, );
+    cat_cart['pr' + a][0] += 1;
+    document.getElementById('valpr' + a).innerHTML = cat_cart['pr' + a][0];
+    updateCart(cat_cart);
+});
+</script>
 {% endblock %}
