--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -76,15 +76,15 @@
         </center>
         <div id="column1">
             <img class="Product" src="https://lh3.googleusercontent.com/jfhnIZASUU6B5ETz1et-gRlcSGWRml6UBr-_H67B9Y62mcYXMoSmas1LbO-jhsrVZ1iIEaxy=w1080-h608-p-no-v0" alt="baby_and_infant" style="width:80%;">
-            <button class="categories-homeo">Homeopathic</button>
+            <a href="/user/category/Homeopathic"><button class="categories-homeo">Homeopathic</button></a>
         </div>
         <div id="column1">
             <img class="Product" src="https://ajp.com.au/wp-content/uploads/2015/03/Dollarphotoclub_75783184.jpg" alt="baby_and_infant" style="width:80%;">
-            <button class="categories-allo">Allopathic</button>
+            <a href="/user/category/Allopathic"><button class="categories-allo">Allopathic</button></a>
         </div>
         <div id="column1">
             <img class="Product" src="https://5.imimg.com/data5/CS/MY/MY-3092624/ayurvedic-medicine-500x500.jpg" alt="baby_and_infant" style="width:80%;">
-            <button class="categories-ayu">Ayurvedic</button>
+            <a href="/user/category/Ayurvedic"><button class="categories-ayu">Ayurvedic</button></a>
         </div>
     </div>
     <br /><br />
