--- a/user/templates/user/basic.html
+++ b/user/templates/user/basic.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="wrapper">
-        <div class="top_navbar">
+        <div class="top_navbar" style="z-index: 5">
             <div class="top_menu">
                 <!-- <img class="logo"src="+.png" alt=""> -->
                 <img class="logo" src="{% static 'user/+.png' %}" alt="">
@@ -43,7 +43,7 @@
                     </a></li>
                 <li><a href="/user/order">
                         <span class="icon"><i class="fas fa-shopping-cart"></i></span>
-                        <span class="title">Orders <span id="Cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">0</span>
+                        <span class="title">Orders <span id="cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">0</span>
                     </a></li>
                 <li><a href="/user">
                         <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
