--- a/user/templates/user/catproducts.html
+++ b/user/templates/user/catproducts.html
@@ -1,3 +1,4 @@
+<!-- No change Required in this page. All good -->
 {% extends 'user/basic.html'%}
 {% load static %}
 {% block title %}Category|{{product.0.category}} Products{% endblock %}
@@ -27,7 +28,7 @@
     <div class="row my-3">
         {% for i in product %}
         <div class="col">
-            <div class="card align-items-center" style="width: 18rem;z-index: -1;">
+            <div class="card align-items-center" style="width: 18rem;">
                 <img class="card-img-top" src="/media/{{i.image}}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title" id="namepr{{i.product_id}}" style="color: black;">{{i.product_name}}</h5>
@@ -56,12 +57,13 @@ if (localStorage.getItem('cat_cart') == null) {
 } else {
     cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
     console.log(cat_cart);
-    document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
+    // document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
     updateCart(cat_cart);
 }
+
 // If the add to cart button is clicked, add/increment the item
 $('.divpr').on('click', 'button.cart', function() {
-    var idstr = this.product_id.toString();
+    var idstr = this.id.toString();
     if (cat_cart[idstr] != undefined) {
         qty = cat_cart[idstr][0] + 1;
         cat_cart[idstr][0] = qty;
@@ -77,26 +79,28 @@ $('.divpr').on('click', 'button.cart', function() {
 
 
 function updateCart(cat_cart) {
+    let sum = 0;
     for (var item in cat_cart) {
         document.getElementById("div" + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button> <span id='val" + item + "''>" +
             cat_cart[item][0] + "</span> <button id='plus" + item + "' class= 'btn btn-primary plus'> + </button>";
+            sum+=cat_cart[item][0];
     }
     localStorage.setItem('cat_cart', JSON.stringify(cat_cart));
-    document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
+    document.getElementById('cart').innerHTML = sum;
+    // document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
 }
 // If plus or minus button is clicked, then change the cart as well as the display value
 $('.divpr').on("click", "button.minus", function() {
     a = this.id.slice(7, );
-    cat_cart['pr' + a][0] -= 1;
-    cat_cart['pr' + a][0] = Math.max(0, cat_cart['pr' + a][0]);
-    // document.getElementById('valpr'+a).innerHTML = cart['pr'+a][0];
+    if(cat_cart['pr' + a][0] > 0){
+        cat_cart['pr' + a][0] -= 1;    
+    }
     if (cat_cart['pr' + a][0] == 0) {
         document.getElementById('divpr' + a).innerHTML = '<button id="pr' + a + '" class ="btn btn-primary cart">Add to Cart</button>';
         delete cat_cart['pr' + a];
     } else {
         document.getElementById('valpr' + a).innerHTML = cat_cart['pr' + a][0];
     }
-    // updatePopover(cart);
     updateCart(cat_cart);
 });
 $('.divpr').on("click", "button.plus", function() {
