--- a/user/templates/user/order.html
+++ b/user/templates/user/order.html
@@ -30,7 +30,31 @@
     <div class="h">Orders / Page</div>
 </div>
 <div class="Order_table">
-    <div class="row" id="main_row">
+</div>
+<span class="Foo">
+</span>
+{% endblock %}
+{% block js %}
+<script type="text/javascript">
+updateTable();
+$('.divdel').on('click', 'button.del', function() {
+
+    var idstr = this.id.toString();
+    delete cat_cart[idstr];
+    localStorage.setItem('cat_cart',JSON.stringify(cat_cart));
+    console.log(localStorage.getItem('cat_cart'));
+    $(".Order_table").empty();
+    updateTable();
+    location.reload();
+});
+
+function updateTable() {
+    cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
+    console.log(cat_cart);
+    let sum = 0;
+    let TotalPrice = 0;
+    flag = true;
+    str = `<div class="row" id="main_row">
         <div class="col">
             <center>PRODUCT NAME</center>
         </div>
@@ -41,119 +65,28 @@
             <center>AMOUNT (Rs.)</center>
         </div>
         <div class="col"></div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <center>Paracetemol</center>
-        </div>
-        <div class="col">
-            <center>2</center>
-        </div>
-        <div class="col">
-            <center>10</center>
-        </div>
-        <div class="col">
-            <center><button type="button" class="btn btn-danger">Delete</button></center>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <center>Amoxyciline</center>
-        </div>
-        <div class="col">
-            <center>15</center>
-        </div>
-        <div class="col">
-            <center>150</center>
-        </div>
-        <div class="col">
-            <center><button type="button" class="btn btn-danger">Delete</button></center>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <center>Amoxyciline</center>
-        </div>
-        <div class="col">
-            <center>15</center>
-        </div>
-        <div class="col">
-            <center>150</center>
-        </div>
-        <div class="col">
-            <center><button type="button" class="btn btn-danger">Delete</button></center>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <center>Amoxyciline</center>
-        </div>
-        <div class="col">
-            <center>15</center>
-        </div>
-        <div class="col">
-            <center>150</center>
-        </div>
-        <div class="col">
-            <center><button type="button" class="btn btn-danger">Delete</button></center>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <center>Amoxyciline</center>
-        </div>
-        <div class="col">
-            <center>15</center>
-        </div>
-        <div class="col">
-            <center>150</center>
-        </div>
-        <div class="col">
-            <center><button type="button" class="btn btn-danger">Delete</button></center>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <center>Amoxyciline</center>
-        </div>
-        <div class="col">
-            <center>15</center>
-        </div>
-        <div class="col">
-            <center>150</center>
-        </div>
-        <div class="col">
-            <center><button type="button" class="btn btn-danger">Delete</button></center>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col">
-            <center>Amoxyciline</center>
-        </div>
-        <div class="col">
-            <center>15</center>
-        </div>
-        <div class="col">
-            <center>150</center>
-        </div>
-        <div class="col">
-            <center><button type="button" class="btn btn-danger">Delete</button></center>
-        </div>
-    </div>
-</div>
-<div class="heading2">
-    <div class="h">Total Price <span class="TotalPrice">100</span></div>
-</div>
-{% endblock %}
+    </div>`
+    $('.Order_table').append(str);
+    for (var item in cat_cart) {
+        flag = false;
+        qty = cat_cart[item][0];
+        sum += qty;
+        name = cat_cart[item][1];
+        price = qty * cat_cart[item][2];
+        TotalPrice += (qty * price);
+        str = `<div class="row"><div class="col"><center>${name}</center></div><div class="col">
+            <center>${qty}</center></div><div class="col"><center>${price}</center></div><div class="col">
+            <center><span class="divdel"><button type="button" class="btn btn-danger del" id=${item}>Delete</button></span></center></div></div><hr>`
+        $('.Order_table').append(str);
+    }
+    if (flag === true) {
+        str = `<div class="row"><div class="col-md-4"></div><div class="col-md-4">Uhhh!! Your cart is Empty....</div><div class="col-md-4"></div></div>`;
+        $('.Order_table').append(str);
+    }
+    str = `<div class="heading2"><div class="h">Total Price <span class="TotalPrice">${TotalPrice}</span></div></div>`
+    $('.Foo').append(str);
+    document.getElementById('cart').innerHTML = sum;
 
-{% block js %}
-
-
-
+}
+</script>
 {% endblock %}
