--- a/user/templates/user/basic.html
+++ b/user/templates/user/basic.html
@@ -37,9 +37,9 @@
                         <span class="icon"><i class="material-icons" style="font-size:15px;">dashboard</i></span>
                         <span class="title">Dashboard</span>
                     </a></li>
-                <li><a href="/user/catproducts">
+                <li><a href="/user/tracker">
                         <span class="icon"><i class="fas fa-list-ul"></i></span>
-                        <span class="title">Products</span>
+                        <span class="title">Tracker</span>
                     </a></li>
                 <li><a href="/user/order">
                         <span class="icon"><i class="fas fa-shopping-cart"></i></span>
