--- a/user/static/user/checkout.css
+++ b/user/static/user/checkout.css
@@ -9,12 +9,13 @@
   font-family: 'Montserrat', sans-serif;
 }
 body{
-  /* background: #e1ecf2; */
   background: #15161d;
+  color:white;
 }
 .wrapper{
   margin: 10px;
 }
+
 .wrapper .top_navbar{
   width: 100%;
   width: calc(100% - 20px);
@@ -24,8 +25,24 @@ body{
   top: 10px;
 }
 
+.wrapper .top_navbar .hamburger{
+  width: 65px;
+  height: 100%;
+  background: #2e4ead;
+  padding: 15px 17px;
+  border-top-left-radius: 20px;
+  cursor: pointer;
+}
+
+.wrapper .top_navbar .hamburger div{
+  height: 4px;
+  width: 35px;
+  background: #92a6e2;
+  margin: 5px 0;
+  border-radius: 5px;
+}
+
 .wrapper .top_navbar .top_menu{
-  /* width: calc(100% - 70px); */
   width: 100%;
   height: 100%;
   background: #fff;
@@ -36,13 +53,13 @@ body{
   align-items: center;
   padding: 0 20px;
   box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  margin-top: -10px;
 }
 
 .wrapper .top_navbar .top_menu .logo{
   width: 60px;
 }
 .wrapper .top_navbar .top_menu .Head{
-  /* width: 65px; */
   color: #888;
   font-size: 20px;
   font-weight: 700;
@@ -50,14 +67,12 @@ body{
   margin-right: 867px;
 }
 
-
 .wrapper .top_navbar .top_menu ul{
   display: flex;
 }
 
 .wrapper .top_navbar .top_menu ul li a{
   display: block;
-  margin: 0 10px;
   width: 35px;
   height: 40px;
   line-height: 35px;
@@ -78,14 +93,14 @@ body{
 
 .wrapper .sidebar{
   position: fixed;
-  top: 80px;
+  top: 70px;
   left: 10px;
-  /* background: #2e4ead; */
   background: rgba(37,45,66,0.7);
   width: 200px;
-  height: calc(100% - 80px);
+  height: calc(98% - 80px);
   border-bottom-left-radius: 20px;
   transition: all 0.3s ease;
+  z-index: -1;
 }
 
 .wrapper .sidebar ul li a{
@@ -96,7 +111,6 @@ body{
     margin-bottom: 1px;
     color: #92a6e2;
     white-space: nowrap;
-    align-content: center;
 }
 
 .wrapper .sidebar ul li a:before{
@@ -123,7 +137,6 @@ body{
 .wrapper .sidebar ul li a.active{
   background: #4360b5;
   color: #fff;
-
 }
 
 .wrapper .sidebar ul li a:hover:before,
@@ -146,6 +159,3 @@ body{
 .wrapper.collapse .sidebar ul li a span.title{
   display: none;
 }
-
-
-
