--- a/user/templates/user/order.html
+++ b/user/templates/user/order.html
@@ -1,3 +1,4 @@
+<!-- No change Required in this page. All good -->
 {% extends 'user/basic.html'%}
 {% load static %}
 {% block title %}Order{% endblock %}
@@ -9,7 +10,7 @@
     top: 86%;
     color: white;
     left: 32%;
-    height: 45px;
+    height: 50px;
     background: #4360b5;
     position: absolute;
 }
@@ -23,6 +24,65 @@
 .TotalPrice {
     float: right;
 }
+
+.heading{
+  top: 24%;
+  left: 32%;
+  color: white;
+  z-index: 5;
+  position: absolute;
+  width: 760px;
+  height: 45px;
+  background:#4360b5;
+}
+
+.h{
+  margin: 10px;
+  padding-left: 20px;
+}
+
+.Order_table{
+  top: 60%;
+  left: 60%;
+  color: white;
+  transform: translate(-50%,-50%);
+  position: absolute;
+  width: 800px;
+  height: 400px;
+  background:rgba(37,45,66,0.7);
+  overflow: auto;
+  text-align: justify-all;
+}
+
+
+.Order_table #main_row{
+  color: #888;
+  margin:20px;
+  margin-top: 27px;
+  margin-bottom: 27px;
+}
+
+.Order_table .row{
+  color: white;
+  margin: 20px;
+}
+.Order_table #main_row .col{
+  font-size: 15px;
+}
+
+.Order_table .row .col{
+  font-size: 16px;
+}
+hr{
+    background: rgba(255,255,255,0.1);
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.btn-danger{
+  width: 120px;
+  height: 36px;
+}
 </style>
 {% endblock %}
 {% block body %}
@@ -32,6 +92,7 @@
 <div class="Order_table">
 </div>
 <span class="Foo">
+    
 </span>
 {% endblock %}
 {% block js %}
@@ -41,7 +102,7 @@ $('.divdel').on('click', 'button.del', function() {
 
     var idstr = this.id.toString();
     delete cat_cart[idstr];
-    localStorage.setItem('cat_cart',JSON.stringify(cat_cart));
+    localStorage.setItem('cat_cart', JSON.stringify(cat_cart));
     console.log(localStorage.getItem('cat_cart'));
     $(".Order_table").empty();
     updateTable();
@@ -73,7 +134,7 @@ function updateTable() {
         sum += qty;
         name = cat_cart[item][1];
         price = qty * cat_cart[item][2];
-        TotalPrice += (qty * price);
+        TotalPrice += price;
         str = `<div class="row"><div class="col"><center>${name}</center></div><div class="col">
             <center>${qty}</center></div><div class="col"><center>${price}</center></div><div class="col">
             <center><span class="divdel"><button type="button" class="btn btn-danger del" id=${item}>Delete</button></span></center></div></div><hr>`
@@ -83,8 +144,10 @@ function updateTable() {
         str = `<div class="row"><div class="col-md-4"></div><div class="col-md-4">Uhhh!! Your cart is Empty....</div><div class="col-md-4"></div></div>`;
         $('.Order_table').append(str);
     }
-    str = `<div class="heading2"><div class="h">Total Price <span class="TotalPrice">${TotalPrice}</span></div></div>`
-    $('.Foo').append(str);
+    else{
+      str = `<div class="heading2 style="font-size:10px;" "><div class="row"><div class="col mt-3"><center>Total Price</center></div><div class="col"></div><div class="col mt-3"><center>${TotalPrice}</center></div><div class="col mt-2  "><center><a href="/user/checkout/"><button type="button" class="btn btn-danger">Place Order</button></a></center></div></div></div>`
+    $('.Foo').append(str);  
+    }
     document.getElementById('cart').innerHTML = sum;
 
 }
