--- a/user/templates/user/about.html
+++ b/user/templates/user/about.html
@@ -36,6 +36,7 @@
 {% endblock %}
 {% block js %}
 <script type="text/javascript">
+$("#at").addClass("active");
 //Displaying total items in cart 
 cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
 var sum = 0;
