--- a/user/templates/user/tracker.html
+++ b/user/templates/user/tracker.html
@@ -51,6 +51,7 @@ body {
 {% endblock %}
 {% block js %}
 <script type="text/javascript">
+$("#tr").addClass("active");
 $('#trackerForm').submit(function(event) {
 
     $('.items').empty();
