--- a/user/templates/user/basic.html
+++ b/user/templates/user/basic.html
@@ -78,22 +78,22 @@
         </div>
         <div class="sidebar" style="z-index: 20">
             <ul>
-                <li><a href="/user/about">
+                <li><a href="/user/about" id="at">
                         <span class="icon"><i class="fas fa-info-circle"></i></span>
                         <span class="title">About Us</span></a></li>
-                <li><a href="/user">
+                <li><a href="/user" id="dd">
                         <span class="icon"><i class="material-icons" style="font-size:15px;">dashboard</i></span>
                         <span class="title">Dashboard</span>
                     </a></li>
-                <li><a href="/user/tracker">
+                <li><a href="/user/tracker" id="tr">
                         <span class="icon"><i class="fas fa-list-ul"></i></span>
                         <span class="title">Tracker</span>
                     </a></li>
-                <li><a href="/user/order">
+                <li><a href="/user/order" id="or">
                         <span class="icon"><i class="fas fa-shopping-cart"></i></span>
                         <span class="title">Orders <span id="cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">0</span>
                     </a></li>
-                <li><a href="/user">
+                <li><a href="/user" id="lt">
                         <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
                         <span class="title">Logout</span>
                     </a></li>
