Tracker icon updated

--- a/user/templates/user/basic.html
+++ b/user/templates/user/basic.html
@@ -86,7 +86,7 @@
                         <span class="title">Dashboard</span>
                     </a></li>
                 <li><a href="/user/tracker" id="tr">
-                        <span class="icon"><i class="fas fa-list-ul"></i></span>
+                        <span class="icon"><i class="fa fa-truck"></i></span>
                         <span class="title">Tracker</span>
                     </a></li>
                 <li><a href="/user/order" id="or">
