--- a/user/templates/user/catproducts.html
+++ b/user/templates/user/catproducts.html
@@ -27,7 +27,7 @@
     <span>1 - {{length}} of {{length}} products</span>
     <div class="row my-3">
         {% for i in product %}
-        <div class="col">
+        <div class="col-md-4">
             <div class="card align-items-center" style="width: 18rem;">
                 <img class="card-img-top" src="/media/{{i.image}}" alt="Card image cap">
                 <div class="card-body">
