--- a/user/templates/user/checkout.html
+++ b/user/templates/user/checkout.html
@@ -80,7 +80,7 @@ body{
 <script type="text/javascript">
 
 if(localStorage.getItem('cat_cart') == null){
-      var cart = {};
+      var cat_cart = {};
   }
   else{
     cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
