--- a/user/templates/user/basic.html
+++ b/user/templates/user/basic.html
@@ -69,10 +69,17 @@
                         </form>
                     </div>
                 </center>
-                <ul>
-                    <li style="padding-top: 10px;"><a href="#">
-                            <i class="fas fa-user"></i>
-                        </a></li>
+                <ul style="margin-bottom: 0">
+                    <li style="width: 100px">
+                        {% if user.is_authenticated %}
+                        <center>
+                            <a href="#"><i class="fas fa-user"></i></a>
+                            <span style="color: #888;font-size: 15px;font-weight: 700">Hello, {{user.first_name}}</span>
+                        </center>
+                        {% else %}
+                        <a href="#"><i class="fas fa-user"></i></a>
+                        {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
@@ -93,7 +100,7 @@
                         <span class="icon"><i class="fas fa-shopping-cart"></i></span>
                         <span class="title">Orders <span id="cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">0</span>
                     </a></li>
-                <li><a href="/user" id="lt">
+                <li><a href="/user/logout" id="lt">
                         <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
                         <span class="title">Logout</span>
                     </a></li>
