--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -108,8 +108,11 @@
 {% endblock %}
 {% block js %}
 <script>
-$("button").remove(".active");
 $("#dd").addClass("active");
+console.log({{cart_items|safe}});
+if (localStorage.getItem('cat_cart') == null) {
+    localStorage.cat_cart = {{cart_items|safe}};
+}
 var slideIndex = 1;
 showDivs(slideIndex);
 
@@ -139,6 +142,7 @@ function showDivs(n) {
 
 //Displaying total items in cart 
 cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
+console.log(cat_cart);
 var sum = 0;
 for(var item in cat_cart){
     let qty = cat_cart[item][0];
